[package]
name = "rlox"
version = "0.1.0"
edition = "2024"
authors = ["Alexander Raish"]
description = "A Rust implementation of the Lox programming language"
repository = "https://github.com/alradish/rlox"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.9"
wasm-bindgen = "0.2"
